# attey

./: .gitignore  config.toml  pyproject.toml
attey/: __init__.py  __main__.py
attey/models/: abc.py  channel.py  options.py  panel.py  player.py  room.py
attey/views/panels/: creation.py  moderation.py
data/branding/: attey.gvdesign
